COD-4 - Add styles for mobile view; Adjust hover state for the menu item; Adjust global settings;

--- a/docroot/themes/custom/themekit/global/sass/base/_config.scss
+++ b/docroot/themes/custom/themekit/global/sass/base/_config.scss
@@ -33,6 +33,10 @@ $z-layers: (
   bottomless-pit: -9999,
   dropdown: 800,
   popup: 900,
+  menu: (
+    block: 850,
+    icon: 851,
+  ),
 );
 
 /// Button config
