--- a/docroot/themes/custom/themekit/global/sass/framework/utils/_helpers.scss
+++ b/docroot/themes/custom/themekit/global/sass/framework/utils/_helpers.scss
@@ -290,5 +290,6 @@ $selector-groups: (
 /// Transition helper mixin
 /// @param {List} $list - A list
 @mixin global-transition($property: all, $duration: $global-transition-duration, $timing-function: $global-transition-timing-function) {
+  will-change: $property;
   transition: $property $duration $timing-function;
 }
