--- a/docroot/themes/custom/themekit/partials/component/navigation/main/menu--main.scss
+++ b/docroot/themes/custom/themekit/partials/component/navigation/main/menu--main.scss
@@ -3,9 +3,33 @@
 ////
 
 .menu--main {
+  @include breakpoint(small down) {
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: rem-calc(326);
+    height: 100vh;
+    max-width: 90vw;
+    padding: rem-calc(152) rem-calc(32) rem-calc(32);
+    background-color: $color-primary-600;
+    color: $color-white;
+    transform: translate3d(100%, 0, 0);
+    z-index: z(menu, block);
+    @include global-transition(transform);
+  }
+
+  &.is-active {
+    @include breakpoint(small down) {
+      transform: translate3d(0, 0, 0);
+    }
+  }
+
   // Adjust Drupal admin styles
   &.contextual-region {
-    position: static;
+    @include breakpoint(medium) {
+      position: static;
+    }
+
     .contextual {
       display: none;
     }
@@ -13,39 +37,90 @@
 
   .menu {
     display: flex;
+    @include breakpoint(small down) {
+      flex-direction: column;
+      text-align: right;
+    }
 
     &__item {
+      @include font-sizes(main-menu-item);
+      @include breakpoint(small down) {
+        width: 100%;
+      }
+
       &:not(:last-child) {
+        @include breakpoint(small down) {
+          margin-bottom: rem-calc(12);
+        }
         @include breakpoint(medium) {
           margin-right: rem-calc(24);
         }
       }
 
       a {
-        display: inline-block;
-        font-weight: $global-weight-medium;
-        line-height: 1.5;
-        color: $color-gray-900;
+        display: block;
+        padding-right: rem-calc(56);
+        color: inherit;
 
         @include breakpoint(medium) {
-          @include global-transition(border-bottom-color);
-          padding-top: rem-calc(4);
-          padding-bottom: rem-calc(2);
-          border-bottom: 2px solid transparent;
+          position: relative;
+          padding-right: 0;
+          color: $color-gray-900;
         }
-        @include selectors(active) {
+
+        &::after {
+          position: absolute;
+          z-index: z(under);
+          bottom: 0;
+          left: 0;
+          width: 100%;
+          height: 2px;
+          background-color: $color-primary-600;
+          transform: scaleX(0);
+          transform-origin: right;
+          @include global-transition(transform);
           @include breakpoint(medium) {
-            border-bottom-color: $color-primary-600;
+            content: '';
+          }
+        }
+
+        &:not(.is-active) {
+          @include selectors(active) {
+            &::after {
+              @include breakpoint(medium) {
+                transform: scaleX(1);
+                transform-origin: left;
+              }
+            }
           }
         }
 
         // Active menu item
         &.is-active {
-          @include breakpoint(medium) {
-            border-bottom-color: $color-primary-600;
+          &::after {
+            @include breakpoint(medium) {
+              transform: scaleX(1);
+            }
           }
         }
       }
+    }
+  }
+
+  &__toggle {
+    @include replace-text-with-icon(menu, rem-calc(24));
+    cursor: pointer;
+    @include breakpoint(medium) {
+      display: none;
+    }
+
+    &[aria-expanded="true"] {
+      @include replace-text-with-icon(close, rem-calc(24));
+      position: fixed;
+      top: rem-calc(24);
+      right: rem-calc(16);
+      z-index: z(menu, icon);
+      color: $color-white;
     }
   }
 }
