--- a/docroot/themes/custom/themekit/partials/region/header/region--header.html.twig
+++ b/docroot/themes/custom/themekit/partials/region/header/region--header.html.twig
@@ -3,5 +3,8 @@
 {% block region %}
   <div class="content">
     {{ content }}
+
+    {# Toggle button for the mobile main navigation #}
+    <button class="menu--main__toggle" aria-expanded="false">{{ 'Menu'|t }}</button>
   </div>
 {% endblock %}
