--- a/docroot/themes/custom/themekit/global/sass/framework/_links.scss
+++ b/docroot/themes/custom/themekit/global/sass/framework/_links.scss
@@ -34,6 +34,7 @@ $links: (
 
   @if ($link-key == more) {
     position: relative;
+    display: inline-block;
     padding-right: rem-calc(52);
     letter-spacing: 0.2em;
     text-transform: uppercase;
@@ -42,11 +43,13 @@ $links: (
       position: absolute;
       top: 0;
       right: rem-calc(8);
+      display: flex;
+      justify-content: flex-end;
       width: rem-calc(32);
       font-size: rem-calc(40);
       line-height: inherit;
       overflow: hidden;
-      @include global-transition(width);
+      @include global-transition();
     }
 
     &:hover,
