COD-6 - Adjust blocks for the footer_bottom region; Base page adjustments

--- a/docroot/themes/custom/themekit/global/sass/base/_settings.scss
+++ b/docroot/themes/custom/themekit/global/sass/base/_settings.scss
@@ -117,6 +117,13 @@ $errorbg: #c74e4e;
 $warningbg: #d28712;
 $statusokbg: #2ca20d;
 
+$social-icons: (
+  linkedin: #006699,
+  meetup: #f64060,
+  twitter: #1d9bf0,
+  youtube: #f00,
+);
+
 $icons: (
   check: "\e86c",
   error: "\e000",
