--- a/docroot/themes/custom/themekit/partials/component/navigation/footer/menu--footer.scss
+++ b/docroot/themes/custom/themekit/partials/component/navigation/footer/menu--footer.scss
@@ -7,70 +7,22 @@
     display: flex;
     @include breakpoint(small down) {
       flex-direction: column;
-      text-align: right;
     }
 
     &__item {
-      @include font-sizes(main-menu-item);
-      @include breakpoint(small down) {
-        width: 100%;
-      }
+      @include font-sizes(text-small);
 
       &:not(:last-child) {
         @include breakpoint(small down) {
-          margin-bottom: rem-calc(12);
+          margin-bottom: rem-calc(8);
         }
         @include breakpoint(medium) {
-          margin-right: rem-calc(24);
+          margin-right: rem-calc(16);
         }
       }
 
       a {
-        display: block;
-        padding-right: rem-calc(56);
-        color: inherit;
-
-        @include breakpoint(medium) {
-          position: relative;
-          padding-right: 0;
-          color: $color-gray-900;
-        }
-
-        &::after {
-          position: absolute;
-          z-index: z(under);
-          bottom: 0;
-          left: 0;
-          width: 100%;
-          height: 2px;
-          background-color: $color-primary-600;
-          transform: scaleX(0);
-          transform-origin: right;
-          @include global-transition(transform);
-          @include breakpoint(medium) {
-            content: '';
-          }
-        }
-
-        &:not(.is-active) {
-          @include selectors(active) {
-            &::after {
-              @include breakpoint(medium) {
-                transform: scaleX(1);
-                transform-origin: left;
-              }
-            }
-          }
-        }
-
-        // Active menu item
-        &.is-active {
-          &::after {
-            @include breakpoint(medium) {
-              transform: scaleX(1);
-            }
-          }
-        }
+        @include main-menu-item($mobile: true, $active-class: false);
       }
     }
   }
