--- a/docroot/themes/custom/themekit/partials/component/navigation/main/menu--main.scss
+++ b/docroot/themes/custom/themekit/partials/component/navigation/main/menu--main.scss
@@ -58,50 +58,13 @@
       }
 
       a {
-        display: block;
+        @include main-menu-item;
         padding-right: rem-calc(56);
         color: inherit;
 
         @include breakpoint(medium) {
-          position: relative;
           padding-right: 0;
           color: $color-gray-900;
-        }
-
-        &::after {
-          position: absolute;
-          z-index: z(under);
-          bottom: 0;
-          left: 0;
-          width: 100%;
-          height: 2px;
-          background-color: $color-primary-600;
-          transform: scaleX(0);
-          transform-origin: right;
-          @include global-transition(transform);
-          @include breakpoint(medium) {
-            content: '';
-          }
-        }
-
-        &:not(.is-active) {
-          @include selectors(active) {
-            &::after {
-              @include breakpoint(medium) {
-                transform: scaleX(1);
-                transform-origin: left;
-              }
-            }
-          }
-        }
-
-        // Active menu item
-        &.is-active {
-          &::after {
-            @include breakpoint(medium) {
-              transform: scaleX(1);
-            }
-          }
         }
       }
     }
