COD-2 - Adjust template of th twocol layout

--- a/docroot/themes/custom/themekit/partials/layout/twocol/twocol-layout.html.twig
+++ b/docroot/themes/custom/themekit/partials/layout/twocol/twocol-layout.html.twig
@@ -13,11 +13,12 @@
 
 {% set classes = [
   'layout',
+  'twocol-layout',
   'section-padding--' ~ settings.padding,
 ] %}
 
 {{ attach_library('themekit/layout') }}
-{{ attach_library('themekit/layout--onecol') }}
+{{ attach_library('themekit/layout--twocol') }}
 
 {% if content %}
   <div{{ attributes.addClass(classes) }}>
