COD-5 - Add styles for the Footer Top blocks

--- a/docroot/themes/custom/themekit/global/sass/framework/_buttons.scss
+++ b/docroot/themes/custom/themekit/global/sass/framework/_buttons.scss
@@ -33,6 +33,7 @@ $buttons: (
   letter-spacing: 0.2em;
   text-transform: uppercase;
   appearance: none;
+  @include global-transition;
 
   @if ($size == small) {
     padding: rem-calc(8) rem-calc(12);
