--- a/docroot/themes/custom/themekit/partials/component/navigation/social/menu--social.scss
+++ b/docroot/themes/custom/themekit/partials/component/navigation/social/menu--social.scss
@@ -13,11 +13,15 @@
 
       a {
         display: block;
+        @include global-transition(text-shadow);
 
         @each $icon-name, $icon-color in $social-icons {
           &[href*=#{$icon-name}] {
             @include replace-text-with-icon(social-#{$icon-name}, rem-calc(32));
             color: $icon-color;
+            @include selectors(active) {
+              text-shadow: 0 4px rem-calc(10) rgba($icon-color, .25);
+            }
           }
         }
       }
