--- a/docroot/themes/custom/themekit/partials/region/footer-top/region--footer-top.html.twig
+++ b/docroot/themes/custom/themekit/partials/region/footer-top/region--footer-top.html.twig
@@ -2,9 +2,9 @@
 
 {% block region %}
   <div class="content">
-    <div class="content--primary">
+    <div class="block-subscribe">
       <div class="text">
-        <h3>{{ 'Meld je aan voor de nieuwsbrief'|t }}</h3>
+        <h3 class="block-subscribe__title">{{ 'Meld je aan voor de nieuwsbrief'|t }}</h3>
         <p>{{ 'En blijf op de hoogte van Drupal Nederland'|t }}</p>
       </div>
       <a href="#" class="btn btn--primary">{{ 'Aanmelden'|t }}</a>
