--- a/docroot/themes/custom/themekit/assets/fonts/icomoon/style.css
+++ b/docroot/themes/custom/themekit/assets/fonts/icomoon/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?k4umis');
-  src:  url('fonts/icomoon.eot?k4umis#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?k4umis') format('truetype'),
-    url('fonts/icomoon.woff?k4umis') format('woff'),
-    url('fonts/icomoon.svg?k4umis#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?3ma1yz');
+  src:  url('fonts/icomoon.eot?3ma1yz#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?3ma1yz') format('truetype'),
+    url('fonts/icomoon.woff?3ma1yz') format('woff'),
+    url('fonts/icomoon.svg?3ma1yz#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
