--- a/docroot/themes/custom/themekit/partials/region/footer-top/footer-top.scss
+++ b/docroot/themes/custom/themekit/partials/region/footer-top/footer-top.scss
@@ -3,46 +3,150 @@
 ////
 
 .region-footer-top {
-  @include top-bottom(padding, rem-calc(24));
-  @include breakpoint(medium) {
-    padding-top: rem-calc(48);
-    padding-bottom: rem-calc(64);
-  }
+  overflow: hidden; // Hide shape block
 
   .content {
-    @include content-width(default);
-    @include flex-grid-row($behavior: nest);
+    @include flex-grid-row();
+    position: relative;
+    padding-top: rem-calc(56);
+    padding-bottom: rem-calc(40);
     @include breakpoint(medium) {
+      padding-top: rem-calc(52);
+      padding-bottom: rem-calc(32);
+    }
+    @include breakpoint(large) {
+      display: grid;
+      grid-template-columns: grid-column(7) grid-column(5);
       align-items: center;
     }
 
-    &--primary {
+    @include breakpoint(xlarge) {
+      grid-template-columns: grid-column(8) grid-column(4);
+    }
+
+    // Shape block
+    &::before,
+    &::after {
+      position: absolute;
+      top: 0;
+      width: rem-calc(1006);
+      height: rem-calc(430);
+      content: '';
+      z-index: z(under);
       @include breakpoint(medium) {
-        @include flex-grid-column(6);
+        height: rem-calc(354);
       }
-      @include breakpoint(large) {
-        @include flex-grid-column(4);
+    }
+
+    &::before {
+      left: 0;
+      margin-left: rem-calc(-200);
+      background-color: $color-gray-100;
+      clip-path: polygon(13% 0, 88% 6%, 100% 81%, 95% 100%, 8% 100%, 0% 50%);
+      @include breakpoint(medium) {
+        margin-left: rem-calc(-125);
+        clip-path: polygon(23% 0, 85% 16%, 100% 86%, 24% 100%, 0% 50%);
       }
+    }
+
+    &::after {
+      border-width: 4px;
+      border-image: $color-linear-horizontal;
+      clip-path: polygon(15% 6%, 76% 0, 100% 71%, 92% 90%, 17% 100%, 0% 50%);
     }
   }
 
-  .menu--footer {
+  // Subscribe block
+  .block-subscribe {
+    display: flex;
+    align-items: center;
     @include breakpoint(small down) {
-      margin-top: rem-calc(16);
+      flex-wrap: wrap;
     }
-    @include breakpoint(medium) {
-      margin-left: rem-calc(24);
-    }
-  }
-
-  .block-copyright {
-    margin-top: rem-calc(24);
-    @include breakpoint(medium) {
-      @include flex-grid-column(6);
-      margin-top: rem-calc(10);
+    @include breakpoint(medium down) {
+      @include flex-grid-column(12);
+      margin-bottom: rem-calc(40);
     }
     @include breakpoint(large) {
-      @include flex-grid-column(4);
+      @include grid-column-gutter;
+      grid-column: 1 / span 1;
+      grid-row: 1 / span 2;
+    }
+
+    .text {
+      @include breakpoint(small down) {
+        flex: 1 100%;
+        margin-bottom: rem-calc(16);
+      }
+      @include breakpoint(medium) {
+        margin-right: rem-calc(32);
+      }
+      @include breakpoint(xlarge) {
+        margin-right: rem-calc(60);
+      }
+    }
+
+    &__title {
+      @include heading(h4);
+      margin-bottom: 2px;
+    }
+
+    p {
+      @include font-sizes(text-card);
+      margin: 0;
+    }
+
+    .btn {
+      display: inline-flex;
+      align-items: center;
+      @include icon-before(mail-add) {
+        margin-right: rem-calc(16);
+        font-size: rem-calc(24);
+      }
+    }
+  }
+
+  .navigation__heading {
+    @include font-sizes(kicker-small);
+    margin-bottom: rem-calc(12);
+    color: $color-gray-500;
+    @include breakpoint(medium) {
+      @include font-sizes(kicker-large);
+    }
+  }
+
+  .menu--social {
+    @include breakpoint(small down) {
+      @include flex-grid-column(12);
+    }
+    @include breakpoint(medium only) {
+      @include flex-grid-column(6);
+    }
+    @include breakpoint(large) {
+      @include grid-column-gutter;
+      grid-column: 2 / span 1;
+      grid-row: 1 / span 1;
+    }
+
+    &:not(:last-child) {
+      margin-bottom: rem-calc(32);
+      @include breakpoint(medium) {
+        margin-bottom: rem-calc(24);
+      }
+    }
+  }
+
+  .menu--community {
+    @include breakpoint(small down) {
+      @include flex-grid-column(12);
+    }
+    @include breakpoint(medium only) {
+      @include flex-grid-column(6);
+    }
+    @include breakpoint(large) {
+      @include grid-column-gutter;
+      grid-column: 2 / span 1;
+      grid-row: 2 / span 1;
     }
   }
 }
