--- a/docroot/themes/custom/themekit/partials/node/view-mode/full/node--full.scss
+++ b/docroot/themes/custom/themekit/partials/node/view-mode/full/node--full.scss
@@ -5,71 +5,6 @@
 .node--type-event,
 .node--type-partner {
   &.node--view-mode-full {
-    @include content-width(default);
-    margin-top: rem-calc(40);
-    margin-bottom: rem-calc(110);
-    @include breakpoint(medium) {
-      margin-bottom: rem-calc(160);
-    }
-
-    .node__title {
-      margin-bottom: rem-calc(24);
-    }
-
-    h1.heading {
-      @include heading(h1);
-
-      line-height: 1;
-      max-width: 625px;
-    }
-
-    h4.heading {
-      @include heading(h4);
-    }
-
-    .field-category {
-      @include font-sizes(kicker-large);
-
-      color: $color-gray-500;
-      margin-bottom: 24px;
-    }
-
-    .field--name-field-intro {
-      @include font-sizes(text-large);
-    }
-
-    .field-text {
-      width: 60%;
-      max-width: 632px;
-      margin-bottom: 80px;
-    }
-
-    .field-banner {
-      display: flex;
-      justify-content: space-between;
-    }
-
-    > .node__content {
-      display: flex;
-      justify-content: space-between;
-
-      .field-content {
-        width: 66%;
-        max-width: 864px;
-      }
-
-      .field-info {
-        width: 34%;
-        max-width: 304px;
-
-        .field--name-field-logo {
-          margin-bottom: 16px;
-        }
-
-        h4.heading {
-          margin-bottom: 20px;
-        }
-      }
-    }
+    @include node--full;
   }
 }
