--- a/docroot/themes/custom/themekit/global/sass/base/_settings.scss
+++ b/docroot/themes/custom/themekit/global/sass/base/_settings.scss
@@ -71,6 +71,7 @@
 
 $global-font-size: 100%;
 $global-width: rem-calc(1344);
+$global-width-narrow: 900px;
 $global-lineheight: 1.5;
 $foundation-palette: (
   primary: #1779ba,
@@ -86,7 +87,7 @@ $black: #0a0a0a;
 $white: #fefefe;
 $body-background: $white;
 $body-font-color: $black;
-$body-font-family: 'Ubuntu', sans-serif;
+$body-font-family: "Ubuntu", sans-serif;
 $body-antialiased: true;
 $paragraphs-default-spacing: 70px;
 $global-margin: 1rem;
@@ -106,8 +107,6 @@ $global-color-pick-contrast-tolerance: 0;
 $print-transparent-backgrounds: true;
 
 @include add-foundation-colors;
-
-
 
 // 1.Drupal - All of these settings should be copied over when the _settings.scss partial is updated on new version of foundation!!!
 // --------------
@@ -162,9 +161,6 @@ $icons: (
 );
 /******* End Drupal Defaults *******/
 
-
-
-
 // 2. Breakpoints
 // --------------
 
@@ -188,7 +184,7 @@ $grid-column-gutter: (
   medium: 16px,
 );
 $grid-column-align-edge: true;
-$grid-column-alias: 'columns';
+$grid-column-alias: "columns";
 $block-grid-max: 8;
 
 // 4. Base Typography
@@ -197,46 +193,148 @@ $block-grid-max: 8;
 $header-font-family: $body-font-family;
 $header-font-weight: $global-weight-normal;
 $header-font-style: normal;
-$font-family-monospace: Consolas, 'Liberation Mono', Courier, monospace;
+$font-family-monospace: Consolas, "Liberation Mono", Courier, monospace;
 $header-color: inherit;
 $header-lineheight: 1.4;
 $header-margin-bottom: 0;
 $font-sizes: (
   small: (
-    'body': ('font-size': 16, 'line-height': 1.75em),
-    'text-large': ('font-size': 16, 'line-height': 1.75em),
-    'text-card': ('font-size': 15, 'line-height': 1.6em),
-    'text-small': ('font-size': 13, 'line-height': 1.5385em),
-    'kicker-large': ('font-size': 14, 'line-height': 1.7143em, 'font-weight': $global-weight-medium, 'text-transform': uppercase, 'letter-spacing': .2em),
-    'kicker-small': ('font-size': 12, 'line-height': 1.5em, 'text-transform': uppercase, 'letter-spacing': .3em),
-    'main-menu-item': ('font-size': 20, 'line-height': 2em, 'font-weight': $global-weight-medium),
+    "body": (
+      "font-size": 16,
+      "line-height": 1.75em,
+    ),
+    "text-large": (
+      "font-size": 16,
+      "line-height": 1.75em,
+    ),
+    "text-card": (
+      "font-size": 15,
+      "line-height": 1.6em,
+    ),
+    "text-small": (
+      "font-size": 13,
+      "line-height": 1.5385em,
+    ),
+    "kicker-large": (
+      "font-size": 14,
+      "line-height": 1.7143em,
+      "font-weight": $global-weight-medium,
+      "text-transform": uppercase,
+      "letter-spacing": 0.2em,
+    ),
+    "kicker-small": (
+      "font-size": 12,
+      "line-height": 1.5em,
+      "text-transform": uppercase,
+      "letter-spacing": 0.3em,
+    ),
+    "main-menu-item": (
+      "font-size": 20,
+      "line-height": 2em,
+      "font-weight": $global-weight-medium,
+    ),
   ),
   medium: (
-    'body': ('font-size': 18, 'line-height': 1.6667em),
-    'text-large': ('font-size': 20, 'line-height': 1.8em),
-    'text-card': ('font-size': 16, 'line-height': 1.5em),
-    'text-small': ('font-size': 14, 'line-height': 1.7143em),
-    'kicker-large': ('font-size': 15, 'line-height': 1.6em, 'font-weight': $global-weight-medium, 'text-transform': uppercase, 'letter-spacing': .2em),
-    'kicker-small': ('font-size': 12, 'line-height': 1.5em, 'text-transform': uppercase, 'letter-spacing': .3em),
-    'main-menu-item': ('font-size': 16, 'line-height': 2em, 'font-weight': $global-weight-medium),
+    "body": (
+      "font-size": 18,
+      "line-height": 1.6667em,
+    ),
+    "text-large": (
+      "font-size": 20,
+      "line-height": 1.8em,
+    ),
+    "text-card": (
+      "font-size": 16,
+      "line-height": 1.5em,
+    ),
+    "text-small": (
+      "font-size": 14,
+      "line-height": 1.7143em,
+    ),
+    "kicker-large": (
+      "font-size": 15,
+      "line-height": 1.6em,
+      "font-weight": $global-weight-medium,
+      "text-transform": uppercase,
+      "letter-spacing": 0.2em,
+    ),
+    "kicker-small": (
+      "font-size": 12,
+      "line-height": 1.5em,
+      "text-transform": uppercase,
+      "letter-spacing": 0.3em,
+    ),
+    "main-menu-item": (
+      "font-size": 16,
+      "line-height": 2em,
+      "font-weight": $global-weight-medium,
+    ),
   ),
 );
 $header-styles: (
   small: (
-    'h1': ('font-size': 32, 'line-height': .9375, 'font-weight': $global-weight-bold),
-    'h2': ('font-size': 28, 'line-height': .9334, 'font-weight': $global-weight-bold),
-    'h3': ('font-size': 24, 'line-height': 1.1667, 'font-weight': $global-weight-bold),
-    'h4': ('font-size': 20, 'line-height': 1.2, 'font-weight': $global-weight-bold),
-    'h5': ('font-size': 16, 'line-height': 1.375, 'font-weight': $global-weight-bold),
-    'h6': ('font-size': 14, 'line-height': 1.7143, 'font-weight': $global-weight-medium),
+    "h1": (
+      "font-size": 32,
+      "line-height": 0.9375,
+      "font-weight": $global-weight-bold,
+    ),
+    "h2": (
+      "font-size": 28,
+      "line-height": 0.9334,
+      "font-weight": $global-weight-bold,
+    ),
+    "h3": (
+      "font-size": 24,
+      "line-height": 1.1667,
+      "font-weight": $global-weight-bold,
+    ),
+    "h4": (
+      "font-size": 20,
+      "line-height": 1.2,
+      "font-weight": $global-weight-bold,
+    ),
+    "h5": (
+      "font-size": 16,
+      "line-height": 1.375,
+      "font-weight": $global-weight-bold,
+    ),
+    "h6": (
+      "font-size": 14,
+      "line-height": 1.7143,
+      "font-weight": $global-weight-medium,
+    ),
   ),
   medium: (
-    'h1': ('font-size': 50, 'line-height': 1, 'font-weight': $global-weight-bold),
-    'h2': ('font-size': 40, 'line-height': 1, 'font-weight': $global-weight-bold),
-    'h3': ('font-size': 32, 'line-height': 1, 'font-weight': $global-weight-bold),
-    'h4': ('font-size': 22, 'line-height': 1.1818, 'font-weight': $global-weight-bold),
-    'h5': ('font-size': 18, 'line-height': 1.2222, 'font-weight': $global-weight-bold),
-    'h6': ('font-size': 16, 'line-height': 1.25, 'font-weight': $global-weight-bold),
+    "h1": (
+      "font-size": 50,
+      "line-height": 1,
+      "font-weight": $global-weight-bold,
+    ),
+    "h2": (
+      "font-size": 40,
+      "line-height": 1,
+      "font-weight": $global-weight-bold,
+    ),
+    "h3": (
+      "font-size": 32,
+      "line-height": 1,
+      "font-weight": $global-weight-bold,
+    ),
+    "h4": (
+      "font-size": 22,
+      "line-height": 1.1818,
+      "font-weight": $global-weight-bold,
+    ),
+    "h5": (
+      "font-size": 18,
+      "line-height": 1.2222,
+      "font-weight": $global-weight-bold,
+    ),
+    "h6": (
+      "font-size": 16,
+      "line-height": 1.25,
+      "font-weight": $global-weight-bold,
+    ),
   ),
 );
 $header-text-rendering: optimizeLegibility;
@@ -272,7 +370,7 @@ $blockquote-padding: rem-calc(0 0 0 28);
 $blockquote-border: none;
 $cite-font-size: rem-calc(14);
 $cite-color: $color-black;
-$cite-pseudo-content: '';
+$cite-pseudo-content: "";
 $keystroke-font: $font-family-monospace;
 $keystroke-color: $black;
 $keystroke-background: $light-gray;
@@ -355,8 +453,8 @@ $breadcrumbs-item-color-disabled: $medium-gray;
 $breadcrumbs-item-margin: 0.75rem;
 $breadcrumbs-item-uppercase: true;
 $breadcrumbs-item-separator: true;
-$breadcrumbs-item-separator-item: '/';
-$breadcrumbs-item-separator-item-rtl: '\\';
+$breadcrumbs-item-separator-item: "/";
+$breadcrumbs-item-separator-item-rtl: "\\";
 $breadcrumbs-item-separator-color: $medium-gray;
 
 // 11. Button
@@ -389,7 +487,7 @@ $button-transition: background-color 0.25s ease-out, color 0.25s ease-out;
 
 $buttongroup-margin: 1rem;
 $buttongroup-spacing: 1px;
-$buttongroup-child-selector: '.button';
+$buttongroup-child-selector: ".button";
 $buttongroup-expand-max: 6;
 $buttongroup-radius-on-each: true;
 
@@ -595,7 +693,7 @@ $offcanvas-transition-length: 0.5s;
 $offcanvas-transition-timing: ease;
 $offcanvas-fixed-reveal: true;
 $offcanvas-exit-background: rgba($white, 0.25);
-$maincontent-class: 'off-canvas-content';
+$maincontent-class: "off-canvas-content";
 
 // 26. Orbit
 // ---------
@@ -642,12 +740,7 @@ $progress-radius: $global-radius;
 // 29. Prototype Arrow
 // -------------------
 
-$prototype-arrow-directions: (
-  down,
-  up,
-  right,
-  left
-);
+$prototype-arrow-directions: (down, up, right, left);
 $prototype-arrow-size: 0.4375rem;
 $prototype-arrow-color: $black;
 
@@ -673,13 +766,7 @@ $prototype-border-color: $medium-gray;
 // ---------------------
 
 $prototype-display-breakpoints: $global-prototype-breakpoints;
-$prototype-display: (
-  inline,
-  inline-block,
-  block,
-  table,
-  table-cell
-);
+$prototype-display: (inline, inline-block, block, table, table-cell);
 
 // 34. Prototype Font-Styling
 // --------------------------
@@ -693,11 +780,7 @@ $prototype-font-bold: $global-weight-bold;
 // -----------------------------
 
 $prototype-list-breakpoints: $global-prototype-breakpoints;
-$prototype-style-type-unordered: (
-  disc,
-  circle,
-  square
-);
+$prototype-style-type-unordered: (disc, circle, square);
 $prototype-style-type-ordered: (
   decimal,
   lower-alpha,
@@ -712,22 +795,13 @@ $prototype-style-type-ordered: (
 // ----------------------
 
 $prototype-overflow-breakpoints: $global-prototype-breakpoints;
-$prototype-overflow: (
-  visible,
-  hidden,
-  scroll
-);
+$prototype-overflow: (visible, hidden, scroll);
 
 // 37. Prototype Position
 // ----------------------
 
 $prototype-position-breakpoints: $global-prototype-breakpoints;
-$prototype-position: (
-  static,
-  relative,
-  absolute,
-  fixed
-);
+$prototype-position: (static, relative, absolute, fixed);
 $prototype-position-z-index: 975;
 
 // 38. Prototype Rounded
@@ -750,22 +824,19 @@ $prototype-separator-margin-top: $global-margin;
 // --------------------
 
 $prototype-shadow-breakpoints: $global-prototype-breakpoints;
-$prototype-box-shadow: 0 2px 5px 0 rgba(0,0,0,.16),
-0 2px 10px 0 rgba(0,0,0,.12);
+$prototype-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16),
+  0 2px 10px 0 rgba(0, 0, 0, 0.12);
 
 // 41. Prototype Sizing
 // --------------------
 
 $prototype-sizing-breakpoints: $global-prototype-breakpoints;
-$prototype-sizing: (
-  width,
-  height
-);
+$prototype-sizing: (width, height);
 $prototype-sizes: (
   25: 25%,
   50: 50%,
   75: 75%,
-  100: 100%
+  100: 100%,
 );
 
 // 42. Prototype Spacing
@@ -778,21 +849,13 @@ $prototype-spacers-count: 3;
 // -----------------------------
 
 $prototype-decoration-breakpoints: $global-prototype-breakpoints;
-$prototype-text-decoration: (
-  overline,
-  underline,
-  line-through,
-);
+$prototype-text-decoration: (overline, underline, line-through);
 
 // 44. Prototype Text-Transformation
 // ---------------------------------
 
 $prototype-transformation-breakpoints: $global-prototype-breakpoints;
-$prototype-text-transformation: (
-  lowercase,
-  uppercase,
-  capitalize
-);
+$prototype-text-transformation: (lowercase, uppercase, capitalize);
 
 // 45. Prototype Text-Utilities
 // ----------------------------
@@ -944,10 +1007,9 @@ $grid-container: $global-width;
 $grid-columns: 12;
 $grid-margin-gutters: (
   small: 20px,
-  medium: 30px
+  medium: 30px,
 );
 $grid-padding-gutters: $grid-margin-gutters;
 $grid-container-padding: $grid-padding-gutters;
 $grid-container-max: $global-width;
 $xy-block-grid-max: 8;
-
