--- a/docroot/themes/custom/themekit/global/sass/framework/_buttons.scss
+++ b/docroot/themes/custom/themekit/global/sass/framework/_buttons.scss
@@ -28,7 +28,6 @@ $buttons: (
   }
   background: key($button, background);
   color: key($button, color);
-  line-height: 1;
   font-weight: $global-weight-medium;
   letter-spacing: 0.2em;
   text-transform: uppercase;
@@ -38,9 +37,15 @@ $buttons: (
   @if ($size == small) {
     padding: rem-calc(8) rem-calc(12);
     font-size: rem-calc(12);
+    line-height: 1;
   } @else if ($size == large) {
-    padding: rem-calc(16) rem-calc(32);
-    font-size: rem-calc(15);
+    padding: rem-calc(12) rem-calc(20);
+    font-size: rem-calc(14);
+    line-height: rem-calc(24);
+    @include breakpoint(medium) {
+      padding: rem-calc(16) rem-calc(32);
+      font-size: rem-calc(15);
+    }
   }
 
   &:hover,
