--- a/docroot/themes/custom/themekit/partials/component/basic-banner/block--basic-banner.scss
+++ b/docroot/themes/custom/themekit/partials/component/basic-banner/block--basic-banner.scss
@@ -4,16 +4,35 @@
 
 .block--basic-banner {
   @include content-width(default);
-  padding-top: rem-calc(40);
-  @include breakpoint(medium) {
-    padding-top: rem-calc(110);
-  }
 
   .field--name-field-heading {
-    @include heading(h3);
-    margin-bottom: rem-calc(20);
-    @include breakpoint(medium) {
+    margin-bottom: rem-calc(24);
+  }
+
+  .field--name-field-description {
+    @include font-sizes(text-large);
+
+    &:not(:last-child) {
       margin-bottom: rem-calc(24);
+    }
+  }
+
+  .field--name-field-p-link {
+    display: inline-flex;
+    flex-wrap: wrap;
+    align-items: center;
+    row-gap: rem-calc(16);
+    @include breakpoint(medium) {
+      row-gap: rem-calc(24);
+    }
+
+    > .field__item {
+      &:not(:last-child) {
+        margin-right: rem-calc(24);
+        @include breakpoint(medium) {
+          margin-right: rem-calc(48);
+        }
+      }
     }
   }
 }
