--- a/docroot/themes/custom/themekit/global/sass/framework/_custom-styles.scss
+++ b/docroot/themes/custom/themekit/global/sass/framework/_custom-styles.scss
@@ -109,3 +109,10 @@
     }
   }
 }
+
+@mixin shape-image($inverse: false) {
+  clip-path: polygon(12% 0, 87% 4%, 100% 61%, 79% 100%, 17% 95%, 0 42%);
+  @if ($inverse == true) {
+    transform: scaleX(-1);
+  }
+}
