--- a/docroot/themes/custom/themekit/partials/component/home-banner/block--home-banner.scss
+++ b/docroot/themes/custom/themekit/partials/component/home-banner/block--home-banner.scss
@@ -1,8 +1,8 @@
 ////
-/// Basic Banner block
+/// Homepage Banner block
 ////
 
-.block--basic-banner {
+.block--home-banner {
   @include content-width(default);
   @include breakpoint(large) {
     display: flex;
@@ -12,37 +12,27 @@
   .content {
     @include breakpoint(large) {
       @include flex-grid-size(5);
-    }
-    @include breakpoint(xlarge) {
-      @include flex-grid-size(6);
+      @include grid-column-offset(1);
     }
   }
 
   .field--name-field-media {
     position: relative;
     @include breakpoint(medium down) {
-      margin-bottom: rem-calc(48);
+      margin-bottom: rem-calc(40);
     }
     @include breakpoint(large) {
-      @include flex-grid-size(5);
-      order: 2;
-    }
-    @include breakpoint(xlarge) {
       @include flex-grid-size(6);
-      @include grid-column-offset(1);
     }
 
     img {
-      @include shape-image;
-      @include banner-image;
+      @include shape-image($inverse: true);
+      @include banner-image($home-banner: true);
     }
   }
 
   .field--name-field-heading {
     margin-bottom: rem-calc(24);
-    @include breakpoint(large) {
-      margin-top: rem-calc(20);
-    }
   }
 
   .field--name-field-description {
