COD-5 - Pass site_settings into the footer regions; Adjust footer styles

--- a/docroot/themes/custom/themekit/partials/region/footer-bottom/region--footer-bottom.html.twig
+++ b/docroot/themes/custom/themekit/partials/region/footer-bottom/region--footer-bottom.html.twig
@@ -9,7 +9,7 @@
       {{ content }}
     </div>
     <div class="content--secondary">
-      {{ site_settings.content.footer_copyright.value|raw }}
+      {{ site_settings.footer.footer_copyright.value|raw }}
     </div>
   </div>
 {% endblock %}
